<resources>
    <string name="app_name">iraise</string>
    <string name="login">Login</string>
    <string name="silakan_login_di_sini">Silakan login di sini.</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="beranda">Beranda</string>
    <string name="button">Button</string>
    <string name="profile">Profile</string>
    <string name="faq">FAQ</string>
    <string name="pesan">PESAN</string>
    <string name="wisuda">WISUDA</string>
    <string name="cuti">CUTI</string>
</resources>